src/app/components/upvote-button/upvote-button.styles.less
@backgroundColor: #f7941d;
@textColor: #ffffff;
@ringBackgroundColor: #fafafa;

.btn-bch-upvote-container {
  cursor: pointer;
}

.btn-bch-upvote-container > button {
  position: relative;
  padding: 2px 5px 2px 20px;
  line-height: 20px;
  z-index: 0;
  height: 30px;
  outline: none !important;
  box-shadow: none !important;
  min-width: 115px;
  width: 115px;
  max-width: 115px;
  margin-left: -18px;
  float: left;
  overflow: hidden;
}

.btn-bch-upvote-container > .bch-icon {
  width: 30px;
  height: 30px;
  float: left;
  position: relative;
  z-index: 10;
}

.btn-bch-upvote-container > button > .bch-upvote-button-loading {
  display: none;
}

.btn-bch-upvote-container.active > button > .bch-upvote-button-loading {
  display: inline-block;
}

.btn-bch-upvote-container.active > button > .bch-upvote-button-text,
.btn-bch-upvote-container.active > button > .bch-upvote-button-amount {
  display: none;
}

.btn-bch-upvote-container > button > .bch-upvote-button-text,
.btn-bch-upvote-container > button > .bch-upvote-button-amount {
  position: absolute;
  top: 4px;
  left: 0;
  margin-left: 30px;
  width: 68px;
  padding-left: 4px;
  padding-right: 4px;
  transition: all 0.3s ease-in-out;
}

.btn-bch-upvote-container > button > .bch-upvote-button-amount,
.btn-bch-upvote-container > button > .bch-upvote-button-text,
.btn-bch-upvote-container > button > .bch-upvote-button-loading {
  text-transform: uppercase;
  font-weight: bold;
}

.btn-bch-upvote-container > button > .bch-upvote-button-amount {
  opacity: 1;
  transform: translate(0, 0);
}

.btn-bch-upvote-container > button > .bch-upvote-button-text {
  opacity: 0;
  transform: translate(100%, 0);
}

.btn-bch-upvote-container:hover > button > .bch-upvote-button-amount {
  opacity: 0;
  transform: translate(100%, 0);
}

.btn-bch-upvote-container:hover > button > .bch-upvote-button-text {
  opacity: 1;
  transform: translate(0, 0);
}

.btn-bch-upvote-container.active > .bch-icon,
.btn-bch-upvote-container.active > .bch-icon-loading,
.btn-bch-upvote-container.disabled > .bch-icon,
.btn-bch-upvote-container.disabled > .bch-icon-loading
{
  cursor: not-allowed;
}

.btn-bch-upvote-container.disabled > .btn-bch-upvote {
  opacity: .65;
}


.btn-bch-upvote-container.active > .bch-icon-loading {
  display: initial;
}

.bch-icon-loading {
  display: none;
  background-color: rgba(0, 0, 0, 0);
  opacity: 0.9;
  border-left: 2px solid rgba(0, 0, 0, 0) !important;
  border-right: 2px solid rgba(0, 0, 0, 0) !important;
  border-radius: 50px;
  width: 34px;
  z-index: 11;
  height: 34px;
  position: absolute;
  -moz-animation: spinoffPulse 1s infinite linear;
  -webkit-animation: spinoffPulse 1s infinite linear;
  animation: spinoffPulse 1s infinite linear;
}

.btn-bch-upvote-container > button {
  background: @backgroundColor;
  color: @textColor !important;
}

.btn-bch-upvote-container:hover,
.btn-bch-upvote-container > button:hover {
  color: @textColor !important;
}

.bch-icon-loading {
  border: 2px solid @backgroundColor;
}

@-moz-keyframes spinPulse {
  0% {
    -moz-transform: rotate(160deg);
    opacity: 0;
    box-shadow: 0 0 1px @backgroundColor;
  }

  50% {
    -moz-transform: rotate(145deg);
    opacity: 1;
  }

  100% {
    -moz-transform: rotate(-320deg);
    opacity: 0;
  }
}

@-moz-keyframes spinoffPulse {
  0% {
    -moz-transform: rotate(0deg);
  }

  100% {
    -moz-transform: rotate(360deg);
  }
}

@-webkit-keyframes spinPulse {
  0% {
    -webkit-transform: rotate(160deg);
    opacity: 0;
    box-shadow: 0 0 1px @backgroundColor;
  }

  50% {
    -webkit-transform: rotate(145deg);
    opacity: 1;
  }

  100% {
    -webkit-transform: rotate(-320deg);
    opacity: 0;
  }
}

@-webkit-keyframes spinoffPulse {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spinPulse {
  0% {
    transform: rotate(160deg);
    opacity: 0;
    box-shadow: 0 0 1px @backgroundColor;
  }

  50% {
    transform: rotate(145deg);
    opacity: 1;
  }

  100% {
    transform: rotate(-320deg);
    opacity: 0;
  }
}

@keyframes spinoffPulse {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.bch-icon-outer-ring-color{fill:@ringBackgroundColor;} /* container background color */
.bch-icon-inner-ring-color{fill:@backgroundColor;}
.bch-icon-color{fill:@textColor;}

